@@ -1,0 +1,16 @@
+// Copyright 2002-2013, University of Colorado Boulder
+
+/**
+ * Units used on the graph.
+ *
+ * @author Chris Malley (PixelZoom, Inc.)
+ */
+define( function() {
+  'use strict';
+
+  // NOTE: enum pattern recommends using {} for each value, but strings are more convenient for debugging
+  return Object.freeze( {
+    MOLES_PER_LITER: 'molesPerLiter',
+    MOLES: 'moles'
+  } );
+} );
